<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CriarContaActivity">

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crie_sua_conta"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_nome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/nome"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="300dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nome" />

        <EditText
            android:id="@+id/et_senha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_left_arrow"
            app:layout_constraintBottom_toTopOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="150dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new_character"
            app:layout_constraintBottom_toTopOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="150dp" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>